# C_drive

./: .gitignore
.github/workflows/: ci.yml  release.yml
telegram-drive/: Cargo.toml  README.md  SECURITY_ANALYSIS.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tauri.conf.json  vite.config.js
telegram-drive/capabilities/: default.json
telegram-drive/e2e/: auth_flow.spec.ts  click_regression.spec.ts
telegram-drive/icons/: icon.icns
telegram-drive/scripts/: build-front.ps1  check-no-innerhtml.mjs  desktop-smoke-tauri-driver.md  dev-server.ps1  run-npm-command.mjs  sync-version.mjs
telegram-drive/src/: auth.rs  cache.rs  chunking.rs  database.rs  dedup.rs  downloader.rs  file_index.rs  main.rs  models.rs  performance.rs  progress.rs  security.rs  session_store.rs  telegram.rs  transfer_matrix.rs  uploader.rs
telegram-drive/src-tauri/: tauri.conf.json
telegram-drive/src/ui-app/: App.jsx  styles.css
telegram-drive/src/ui-app/components/: DownloadModal.jsx  Explorer.jsx  LoginScreen.jsx  NewFolderModal.jsx  PreviewModal.jsx  SettingsModal.jsx  ShellHeader.jsx  TransferQueue.jsx
telegram-drive/src/ui-app/lib/: format.js  i18n.js  tauri.js
telegram-drive/ui/: app.js  index.html  style.css
