[package]
name = "telegram-drive"
version = "0.1.0"
edition = "2021"
description = "Savedrive desktop application"
authors = ["Savedrive Team"]
license = "MIT"

[package.metadata.tauri]

[dependencies]
aes-gcm = "0.10"
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde", "clock"] }
dirs = "6"
futures = "0.3"
futures-core = "0.3"
grammers-client = "0.9"
grammers-mtsender = "0.9"
grammers-session = { version = "0.9", default-features = false, features = ["serde"] }
hex = "0.4"
mime_guess = "2"
moka = { version = "0.12", features = ["future"] }
pbkdf2 = "0.12"
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "sync", "time"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
tauri = { version = "2", features = [] }
rfd = "0.15"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Power", "Win32_System_Threading"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
